# tmx

./: .ocamlformat  README.md  dune  dune-project  tmx.opam
lib/: basic.ml  basic.mli  bigstring.ml  bigstring.mli  class.ml  class.mli  class0.ml  class0.mli  class_intf.ml  color.ml  color.mli  context.ml  context.mli  conv_data.ml  conv_json.ml  conv_json.mli  conv_xml.ml  conv_xml.mli  core.ml  core.mli  core_generic.ml  core_generic.mli  core_intf.ml  customtype.ml  customtype.mli  customtype0.ml  customtype0.mli  customtype_intf.ml  data.ml  data.mli  dune  enum.ml  enum.mli  enum0.ml  enum0.mli  enum_intf.ml  error.ml  error.mli  gid.ml  gid.mli  (+56 more)
src/: color.mli  dune  error.ml  error.mli  gid.ml  gid.mli  tmx.ml  util.ml
test/: dune  helpers.ml  helpers.mli  test_color.ml  test_context.ml  test_conv.ml  test_data.ml  test_enum.ml  test_gid.ml  test_loader.ml  test_map.ml  test_object.ml  test_property.ml  test_state.ml  test_tileset.ml
test/data/: abc-propertytypes.json  bad-file.tsx  bad-image.tsx  bad-obj-prop.tmx  coll1.tsx  fixed1.tmx  infinite1.tmx  propertytypes1.json  single1.tsx  template1.tx
test/data/subdir/: alt-coll1.tsx  alt-single1.tsx
