(library
 (name tmx)
 (public_name tmx)
 (libraries base64 bigstringaf ezgzip ezjsonm ezxmlm)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.make ppx_deriving.ord ppx_deriving.show))
 (modules
  basic
  color
  context
  conv_json
  conv_xml
  data
  error
  gid
  image
  loader
  nonbasic
  property0
  props
  sigs
  sigs0
  state
  tmx
  util))
