(library
 (name tmx)
 (public_name tmx)
 (libraries base64 bigstringaf ezgzip ezjsonm ezxmlm)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.make ppx_deriving.ord ppx_deriving.show))
 (modules
  color
  context
  conv_json
  conv_xml
  core
  core_generic
  data
  enum
  error
  gid
  loader
  props
  sigs
  sigs0
  tmx
  types
  util))
