(library
 (name tmx)
 (public_name tmx)
 (libraries base64 ezgzip ezjsonm ezxmlm)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.make ppx_deriving.ord ppx_deriving.show))
 (modules
  color
  context
  conv_json
  conv_xml
  core
  core_intf
  error
  gid
  loader
  loader_intf
  props
  props_intf
  sigs
  tmx
  types
  util))
