(tests
 (libraries alcotest tmx)
 (names
  test_color
  test_context
  test_data
  test_enum
  test_gid
  test_map
  test_property
  test_tileset)
 (modules
  test_color
  test_context
  test_data
  test_enum
  test_gid
  test_map
  test_property
  test_tileset)
 (deps
  (glob_files_rec data/*))
 (action
  (run %{test} -e)))
