(tests
 (libraries alcotest tmx)
 (names
  test_color
  test_context
  test_data
  test_enum
  test_gid
  test_loader
  test_property)
 (modules
  test_color
  test_context
  test_data
  test_enum
  test_gid
  test_loader
  test_property)
 (deps
  (glob_files_rec data/*))
 (action
  (run %{test} -e)))
