(tests
 (libraries alcotest tmx)
 (names
  test_color
  test_context
  test_conv
  test_data
  test_enum
  test_gid
  test_loader
  test_object
  test_property)
 (modules
  helpers
  test_color
  test_context
  test_conv
  test_data
  test_enum
  test_gid
  test_loader
  test_object
  test_property)
 (deps
  (glob_files_rec data/*))
 (action
  (run %{test} -e)))
